--- a/frontend-react-js/src/components/MessageItem.css
+++ b/frontend-react-js/src/components/MessageItem.css
@@ -1,6 +1,6 @@
 .message_item {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   overflow: hidden;
   border-bottom: 1px solid rgba(255, 255, 255, 0.05);
   padding: 24px;
